fixing cell wrap

--- a/css/site.css
+++ b/css/site.css
@@ -728,7 +728,7 @@ input[type="checkbox"].SwitcherFormElement:checked + div > div {
   display: -webkit-flex;
   display: -ms-flexbox;
   display:         flex;
-  flex-wrap: wrap;
+  /*flex-wrap: wrap;*/
 }
 .row > [class*='col-'] {
   display: flex;
